@@ -1137,14 +1137,14 @@ TEST(ParsedDicomFile, DicomMapEncodings1)
 
   {
     DicomMap m;
-    ParsedDicomFile dicom(m, GetDefaultDicomEncoding(), false);
+    ParsedDicomFile dicom(m, GetDefaultDicomEncoding(), false, "" /* no private creator */);
     ASSERT_EQ(1u, dicom.GetDcmtkObject().getDataset()->card());
     CheckEncoding(dicom, Encoding_Ascii);
   }
 
   {
     DicomMap m;
-    ParsedDicomFile dicom(m, Encoding_Latin4, false);
+    ParsedDicomFile dicom(m, Encoding_Latin4, false, "" /* no private creator */);
     ASSERT_EQ(1u, dicom.GetDcmtkObject().getDataset()->card());
     CheckEncoding(dicom, Encoding_Latin4);
   }
@@ -1152,7 +1152,7 @@ TEST(ParsedDicomFile, DicomMapEncodings1)
   {
     DicomMap m;
     m.SetValue(DICOM_TAG_SPECIFIC_CHARACTER_SET, "ISO_IR 148", false);
-    ParsedDicomFile dicom(m, GetDefaultDicomEncoding(), false);
+    ParsedDicomFile dicom(m, GetDefaultDicomEncoding(), false, "" /* no private creator */);
     ASSERT_EQ(1u, dicom.GetDcmtkObject().getDataset()->card());
     CheckEncoding(dicom, Encoding_Latin5);
   }
@@ -1160,7 +1160,7 @@ TEST(ParsedDicomFile, DicomMapEncodings1)
   {
     DicomMap m;
     m.SetValue(DICOM_TAG_SPECIFIC_CHARACTER_SET, "ISO_IR 148", false);
-    ParsedDicomFile dicom(m, Encoding_Latin1, false);
+    ParsedDicomFile dicom(m, Encoding_Latin1, false, "" /* no private creator */);
     ASSERT_EQ(1u, dicom.GetDcmtkObject().getDataset()->card());
     CheckEncoding(dicom, Encoding_Latin5);
   }
@@ -1210,7 +1210,7 @@ TEST(ParsedDicomFile, DicomMapEncodings2)
         DicomMap m;
         m.SetValue(DICOM_TAG_PATIENT_NAME, testEncodingsExpected[i], false);
 
-        ParsedDicomFile dicom(m, testEncodings[i], false);
+        ParsedDicomFile dicom(m, testEncodings[i], false, "" /* no private creator */);
     
         const char* encoded = NULL;
         ASSERT_TRUE(dicom.GetDcmtkObject().getDataset()->findAndGetString(DCM_PatientName, encoded).good());
@@ -1230,7 +1230,7 @@ TEST(ParsedDicomFile, DicomMapEncodings2)
         m.SetValue(DICOM_TAG_SPECIFIC_CHARACTER_SET, GetDicomSpecificCharacterSet(testEncodings[i]), false);
         m.SetValue(DICOM_TAG_PATIENT_NAME, testEncodingsExpected[i], false);
 
-        ParsedDicomFile dicom(m, testEncodings[i], false);
+        ParsedDicomFile dicom(m, testEncodings[i], false, "" /* no private creator */);
 
         Json::Value v2;
         dicom.DatasetToJson(v2, DicomToJsonFormat_Human, DicomToJsonFlags_Default, 0);
@@ -1255,7 +1255,7 @@ TEST(ParsedDicomFile, ChangeEncoding)
 
       std::string tag;
 
-      ParsedDicomFile dicom(m, Encoding_Utf8, false);
+      ParsedDicomFile dicom(m, Encoding_Utf8, false, "" /* no private creator */);
       bool hasCodeExtensions;
       ASSERT_EQ(Encoding_Utf8, dicom.DetectEncoding(hasCodeExtensions));
       ASSERT_FALSE(hasCodeExtensions);
@@ -1306,7 +1306,7 @@ TEST(ParsedDicomFile, InvalidCharacterSets)
     DicomMap m;
     m.SetValue(DICOM_TAG_PATIENT_NAME, "HELLO", false);
 
-    ParsedDicomFile d(m, Encoding_Latin3 /* default encoding */, false);
+    ParsedDicomFile d(m, Encoding_Latin3 /* default encoding */, false, "" /* no private creator */);
 
     bool hasCodeExtensions;
     ASSERT_EQ(Encoding_Latin3, d.DetectEncoding(hasCodeExtensions));
@@ -1319,7 +1319,7 @@ TEST(ParsedDicomFile, InvalidCharacterSets)
     m.SetValue(DICOM_TAG_SPECIFIC_CHARACTER_SET, "ISO_IR 13", false);
     m.SetValue(DICOM_TAG_PATIENT_NAME, "HELLO", false);
 
-    ParsedDicomFile d(m, Encoding_Latin3 /* default encoding */, false);
+    ParsedDicomFile d(m, Encoding_Latin3 /* default encoding */, false, "" /* no private creator */);
 
     bool hasCodeExtensions;
     ASSERT_EQ(Encoding_Japanese, d.DetectEncoding(hasCodeExtensions));
@@ -1332,7 +1332,8 @@ TEST(ParsedDicomFile, InvalidCharacterSets)
     m.SetValue(DICOM_TAG_SPECIFIC_CHARACTER_SET, "nope", false);
     m.SetValue(DICOM_TAG_PATIENT_NAME, "HELLO", false);
 
-    ASSERT_THROW(ParsedDicomFile d(m, Encoding_Latin3, false), OrthancException);
+    ASSERT_THROW(ParsedDicomFile d(m, Encoding_Latin3, false, "" /* no private creator */),
+                 OrthancException);
   }
   
   {
@@ -1341,7 +1342,8 @@ TEST(ParsedDicomFile, InvalidCharacterSets)
     m.SetValue(DICOM_TAG_SPECIFIC_CHARACTER_SET, "ISO_IR 13", true);
     m.SetValue(DICOM_TAG_PATIENT_NAME, "HELLO", false);
 
-    ASSERT_THROW(ParsedDicomFile d(m, Encoding_Latin3, false), OrthancException);
+    ASSERT_THROW(ParsedDicomFile d(m, Encoding_Latin3, false, "" /* no private creator */),
+                 OrthancException);
   }
   
   {
@@ -1351,7 +1353,7 @@ TEST(ParsedDicomFile, InvalidCharacterSets)
     m.SetValue(DICOM_TAG_SPECIFIC_CHARACTER_SET, "", false);
     m.SetValue(DICOM_TAG_PATIENT_NAME, "HELLO", false);
 
-    ParsedDicomFile d(m, Encoding_Latin3 /* default encoding */, false);
+    ParsedDicomFile d(m, Encoding_Latin3 /* default encoding */, false, "" /* no private creator */);
 
     bool hasCodeExtensions;
     ASSERT_EQ(Encoding_Latin3, d.DetectEncoding(hasCodeExtensions));
