@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Private tags returned by C-FIND SCP (cf. option "DefaultPrivateCreator")
+
 
 Version 1.7.1 (2020-05-27)
 ==========================
